database linked to DAL

--- a/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
+++ b/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\EntityFramework.6.4.0\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.0\build\EntityFramework.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -12,6 +13,8 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,8 +34,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,8 +53,153 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Armor.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Character.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CharacterCustomization.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CharacterInventory.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CharacterKlasse.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CharacterSubklasse.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Currency.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CurrencyDropTable.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CurrencyInventory.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Damagetype.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseOperations.cs" />
+    <Compile Include="DestinyModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DestinyModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DestinyModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DestinyModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DestinyModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Enemy.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GranaatAbilityDamage.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GranaatSubklasse.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Item.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Locatie.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Map.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MapEnemy.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Mission.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Npc.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="NpcSellItem.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Perk.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PerkArmor.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PerkWapen.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ras.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="RewardTable.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SpecialItem.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SpecialItemCategorie.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SubklasseAbility.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="SubklassePerks.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Wapen.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Wapenklasse.cs">
+      <DependentUpon>DestinyModel.tt</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+    <EntityDeploy Include="DestinyModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DestinyModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DestinyModel.edmx.diagram">
+      <DependentUpon>DestinyModel.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DestinyModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DestinyModel.edmx</DependentUpon>
+      <LastGenOutput>DestinyModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DestinyModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DestinyModel.edmx</DependentUpon>
+      <LastGenOutput>DestinyModel.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.0\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.0\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.0\build\EntityFramework.targets'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.4.0\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.0\build\EntityFramework.targets')" />
 </Project>
