add branch Feature-instellingen + first relaese of instellingen

--- a/Oef_Project_Destiny/Project_Destiny_WPF/Project_Destiny_WPF.csproj
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/Project_Destiny_WPF.csproj
@@ -80,6 +80,9 @@
     <Compile Include="UserControls\Character.xaml.cs">
       <DependentUpon>Character.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControls\Instellingen.xaml.cs">
+      <DependentUpon>Instellingen.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\Welkom.xaml.cs">
       <DependentUpon>Welkom.xaml</DependentUpon>
     </Compile>
@@ -104,6 +107,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControls\Character.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControls\Instellingen.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
