--- a/Oef_Project_Destiny/Destiny_DAL/App.config
+++ b/Oef_Project_Destiny/Destiny_DAL/App.config
@@ -4,12 +4,17 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="DestinyEntities" connectionString="metadata=res://*/DestinyModel.csdl|res://*/DestinyModel.ssdl|res://*/DestinyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=edudb.thomasmore.be,3000;initial catalog=DB_r0317205;persist security info=True;user id=sql_r0317205;password=sql4you;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="DestinyEntities" connectionString="metadata=res://*/DestinyModel.csdl|res://*/DestinyModel.ssdl|res://*/DestinyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=edudb.thomasmore.be,3000;initial catalog=DB_r0317205;user id=sql_r0317205;password=sql4you;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
 </configuration>
