--- a/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
+++ b/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
@@ -42,6 +42,7 @@
     <Reference Include="MaterialDesignColors, Version=1.2.5.1399, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.2.5-ci1399\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
