--- a/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
+++ b/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Basisklasse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecurePassword.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
