Changes to Login and register (remebering Account thru static class Users) + Finished LoggedIn Screen

--- a/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
+++ b/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
@@ -164,6 +164,7 @@
     <Compile Include="SubklassePerk.cs">
       <DependentUpon>DestinyModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="User.cs" />
     <Compile Include="Wapen.cs">
       <DependentUpon>DestinyModel.tt</DependentUpon>
     </Compile>
