Entities added to App.Config

--- a/Oef_Project_Destiny/Project_Destiny_WPF/App.config
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/App.config
@@ -23,4 +23,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DestinyEntities" connectionString="metadata=res://*/DestinyModel.csdl|res://*/DestinyModel.ssdl|res://*/DestinyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=edudb.thomasmore.be,3000;initial catalog=DB_r0317205;persist security info=True;user id=sql_r0317205;password=sql4you;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
