code behind character 50% complete still needs some work + lay-out to be updated

--- a/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
+++ b/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
@@ -135,6 +135,7 @@
       <DependentUpon>DestinyModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Partials\Account.cs" />
+    <Compile Include="Partials\Character.cs" />
     <Compile Include="Partials\CharacterKlasse.cs" />
     <Compile Include="Partials\CharacterSubklasse.cs" />
     <Compile Include="Partials\Ras.cs" />
