--- a/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
+++ b/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Basisklasse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurePassword.cs" />
+    <Compile Include="Valideer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
