--- a/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
+++ b/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Partials\Account.cs" />
     <Compile Include="Partials\CharacterKlasse.cs" />
     <Compile Include="Partials\CharacterSubklasse.cs" />
+    <Compile Include="Partials\Item.cs" />
     <Compile Include="Partials\Locatie.cs" />
     <Compile Include="Partials\Ras.cs" />
     <Compile Include="Perk.cs">
