--- a/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
+++ b/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
@@ -72,6 +72,7 @@
     <Compile Include="CharacterSubklasse.cs">
       <DependentUpon>DestinyModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="GeneralItems.cs" />
     <Compile Include="OptiesUiterlijk.cs" />
     <Compile Include="Currency.cs">
       <DependentUpon>DestinyModel.tt</DependentUpon>
