--- a/Oef_Project_Destiny/Project_Destiny_WPF/Project_Destiny_WPF.csproj
+++ b/Oef_Project_Destiny/Project_Destiny_WPF/Project_Destiny_WPF.csproj
@@ -76,6 +76,9 @@
     <Compile Include="LogInWindow.xaml.cs">
       <DependentUpon>LogInWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="LostPasswordWindow.xaml.cs">
+      <DependentUpon>LostPasswordWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="RegisterWindow.xaml.cs">
       <DependentUpon>RegisterWindow.xaml</DependentUpon>
     </Compile>
@@ -113,6 +116,10 @@
       <DependentUpon>WelcomeControl.xaml</DependentUpon>
     </Compile>
     <Page Include="LogInWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="LostPasswordWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
