--- a/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
+++ b/Oef_Project_Destiny/Destiny_DAL/Destiny_DAL.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Partials\Item.cs" />
     <Compile Include="Partials\Locatie.cs" />
     <Compile Include="Partials\Ras.cs" />
+    <Compile Include="Partials\SpecialItemCategorie.cs" />
     <Compile Include="Perk.cs">
       <DependentUpon>DestinyModel.tt</DependentUpon>
     </Compile>
