--- a/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
+++ b/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GeneralItems.cs" />
+    <Compile Include="GeneralWapens.cs" />
     <Compile Include="OptiesUiterlijk.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurePassword.cs" />
