first unit tests committed

--- a/Oef_Project_Destiny/Destiny_UnitTests/Destiny_UnitTests.csproj
+++ b/Oef_Project_Destiny/Destiny_UnitTests/Destiny_UnitTests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Destiny_Models\Destiny_Models.csproj">
+      <Project>{16f32f33-765a-4f53-a231-eaace37ecb7c}</Project>
+      <Name>Destiny_Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
