--- a/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
+++ b/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SecurePassword.cs" />
     <Compile Include="User.cs" />
-    <Compile Include="Valideer.cs" />
+    <Compile Include="ValidateAccount.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
