--- a/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
+++ b/Oef_Project_Destiny/Destiny_Models/Destiny_Models.csproj
@@ -43,6 +43,7 @@
     <Reference Include="MaterialDesignColors, Version=1.2.5.1399, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialDesignColors.1.2.5-ci1399\lib\net45\MaterialDesignColors.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
